# PicoMiteAllVersions

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AllCommands.h  AllCommands.h.bak  ArialNumFontPlus.h  Audio.c  Audio.cpp  Audio.h  BTConsole.c  BTConsole.h  BTKeyboard.c  BTKeyboard.h  Blit.c  BmpDecoder.c  BuildPicoMite.bat  BuildPicoMiteFR.bat  CFunction.c  CFunction.cpp  CLAUDE.md  CMakeLists.txt  Commands.c  Commands.cpp  Commands.h  Connect.h  Custom.c  Custom.cpp  Custom.h  Doxyfile  Draw.c  Draw.cpp  Draw.h  Draw3D.c  DrawFill.c  DrawInternal.h  Editor.c  Editor.cpp  Editor.h  External.c  (+197 more)
.github/workflows/: clang-format.yml  desktop.yml  esp32-s3.yml  firmware.yml  firmware.yml.disabled  linux-host.yml  mmbasic-ansi.yml  pages.yml  pages.yml.disabled  pc386.yml
Pico Computer/: BOM_Board1_PCB1_2024-10-23.xlsx  HDMIUSBV1.1.dxf
assets/fonts/: ArialNumFontPlus.h  Fnt_10x16.h  Font_8x6.h  Hom_16x24_LE.h  Inconsola.h  Misc_12x20_LE.h  X_8x13_LE.h  arial_bold.h  font-8x10.h  font1.h  smallfont.h  tinyfont.h
cmake/: bytecode_vm.cmake  usb_role.cmake
cmake/linker/: memmap_default_rp2040.ld  memmap_default_rp2350.ld
core/mmbasic/: AllCommands.h  CFunction.c  Commands.c  Commands.h  Custom.c  Custom.h  Draw.c  Draw.h  Editor.c  Editor.h  External.c  External.h  FileIO.c  FileIO.h  Functions.c  Functions.h  Hardware_Includes.h  MATHS.c  MATHS.h  MMBasic.c  MMBasic.h  MMBasic_Includes.h  MMBasic_Print.c  MMBasic_Prompt.c  MMBasic_REPL.c  MM_Misc.c  MM_Misc.h  Memory.c  Memory.h  Operators.c  Operators.h  OptionCommands.c  OptionCommands.h  PicoCFunctions.h  Version.h  XModem.c  XModem.h  configuration.h
core/state/: audio_state.c  display_state.c  option_state.c  pin_state.c
demos/: files.htm  gpio.htm  index.htm  server.bas  status.htm
demos/apps/: pico_blocks.bas
demos/bench/: sieve.bas  sieveasm.bas
docs/: adding-a-new-board.md  adding-a-new-port.md  audio-clean-architecture-plan.md  audio-hal-audit-action-plan.md  audio-refactor-summary.md  background-tasks-plan.md  bridge-restoration-plan.md  bytecode-exe-plan.md  bytecode-vm-plan.md  common-runtime-spine-plan.md  dvi_wifi-bringup-notes.md  fastgfx-plan.md  flash-layout-note.md  gate-audit-summary.md  gate-audit.csv  hal-decascade-plan.md  host-hal-plan.md  mechanical-renames.md  modularity-cleanup-plan.md  pc386-plan.md  pico-wifi-regression-2026-05-14.md  port-duplication-audit.md  port-stub-audit.md  post-decascade-plan.md  preprocessor-gate-elimination-plan.md  real-hal-fixup-plan.md  real-hal-plan.md  root-directory-cleanup-plan.md  runtime-contract.md  serial-console-latency-investigation.md  simulator-plan.md  simulator.md  swd-rtt-debugging.md  type-struct-port-plan.md  upstream-catchup-plan.md  vm-architecture.md  vm-audit-review.md  vm-command-coverage.md  vm-cutover-plan.md  web-console-latency-investigation.md  (+1 more)
drivers/: CONTRIBUTING.md
examples/: freenove_gui_kitchen_sink.bas  freenove_touch_alignment.bas  freenove_touch_calibrate.bas  freenove_touch_gui_controls.bas  freenove_touch_target_survey.bas  psram_alloc_check.bas
hal/: CONTRACT.md  hal_audio.h  hal_audio_control.h  hal_audio_stream.h  hal_calendar.h  hal_display_merge.h  hal_display_oled_spi.h  hal_display_pixel.h  hal_editor_console.h  hal_fast_timer.h  hal_fatfs_dispatch.h  hal_filesystem.h  hal_flash.h  hal_gui_controls.h  hal_heartbeat.h  hal_i2c_keypad.h  hal_keyboard.h  hal_main_init.h  hal_net.h  hal_option_setters.h  hal_periph_io.h  hal_pin.h  hal_port_assert.h  hal_port_config.h  hal_print_options.h  hal_psram.h  hal_random.h  hal_spi_lcd_mem332.h  hal_storage.h  hal_time.h  hal_vga_ops.h  hal_vm_framebuffer.h  hal_watchdog.h  hal_ws2812.h
host/: Makefile  Makefile.wasm  README.md  hal_audio_host.c  hal_filesystem_host.c  hal_flash_host.c  hal_keyboard_host.c  hal_pin_host.c  hal_pin_inlines.h  hal_storage_host.c  hal_time_host.c  host_fs_shims.c  host_peripheral_stubs.c  host_runtime.c  port_config.h  run_optimizer_tests.sh  run_sim.sh  run_tests.sh  vm_sys_pin_host.c
picocalc/: conf_app.h
ports/: bc_tables_host.h  bc_tables_rp2040.h  bc_tables_rp2350.h
porttools/: README.md  basic_serial.py  basic_telnet.py  device_datetime_smoke.py  esp32_fs_vm_smoke.py  esp32_gui_basic_controls_smoke.py  esp32_gui_controls_smoke.py  esp32_gui_gauges_msgbox_smoke.py  esp32_gui_text_controls_smoke.py  esp32_sd_smoke.py  esp32_tcp_smoke.py  esp32_web_console_smoke.py  host_basic_network_conformance.py  host_network_conformance.py  host_new_smoke.py  network_conformance.py  pico_console_smoke.py  pico_files_smoke.py  pico_fs_vm_smoke.py  pico_input_smoke.py  pico_keymap_smoke.py  pico_sd_smoke.py  psram_smoke.py  telnet_smoke.py  wasm_proxy_network_conformance.py
runtime/: runtime.h  runtime_abort.c  runtime_boot.c  runtime_cmd_load_post_cleanup.c  runtime_console.c  runtime_console_adapter.c  runtime_console_escdecode.c  runtime_console_escdecode.h  runtime_console_input_noop.c  runtime_console_printstring.c  runtime_console_putchar.c  runtime_filesystem_defaults.c  runtime_getline.c  runtime_interrupt.c  runtime_program.c  runtime_terminal_hooks_noop.c
shared/: cmd_psram.c  cmd_ws2812_shared.c
tools/: bisect_tilemap.sh  build_lfs.py  check_clang_format.sh  check_flash_layout.sh  check_hal_purity.sh  check_ram_baseline.sh  check_vm_pin_modes.sh  check_wasm_symbols.sh  flash.sh  grab_basfile.py  hal_scoreboard.sh  patch_pico_sdk_gcc15.sh  ram_baseline_DVIWIFIRP2350.txt  ram_baseline_HDMI.txt  ram_baseline_HDMIUSB.txt  ram_baseline_PICO.txt  ram_baseline_PICORP2350.txt  ram_baseline_PICOUSB.txt  ram_baseline_PICOUSBRP2350.txt  ram_baseline_VGA.txt  ram_baseline_VGARP2350.txt  ram_baseline_VGAUSB.txt  ram_baseline_VGAUSBRP2350.txt  ram_baseline_VGAWIFIRP2350.txt  ram_baseline_WEB.txt  ram_baseline_WEBRP2350.txt  ram_baseline_picocalc_rp2040.txt  ram_baseline_picocalc_rp2350.txt  ram_baseline_picocalc_wifi_rp2040.txt  ram_baseline_picocalc_wifi_rp2350.txt  test_loop.py  validate_all.sh
usb_host_files/: tusb_config.h
utils/: FM151.bas  FM151.bas.h  help.txt  help.txt.h
web/: app.js  index.html  style.css
(+1302 files in other folders)
